--- a/2_live_server.html
+++ b/2_live_server.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <!-- 用vscode进行gitpush -->
     <!--在body中所写的标签内容，都可以在浏览器中查看到-->
     <h1>live server插件可以实时响应</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas nulla nam minima consequatur
