--- a/3_meta_tags.html
+++ b/3_meta_tags.html
@@ -1,11 +1,21 @@
-<!-- 快捷键shitf+!l回车可以生成文件基本结构 -->
+<!-- 英文输入法快捷键shitf+!l回车可以生成文件基本结构 -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+    <!-- charset=字符集，写tuf-8可以显示任何语言，现在可以不写-->
     <meta charset="UTF-8">
+    <!-- viewport是响应式设计，在不同终端设备显示不同的样式-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- 浏览器兼容 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <!-- 网页描述 -->
+    <title>标题</title>
+    <meta name="description" content="网页描述">
+    <meta name="keywords" content="搜索的关键字，现在要向搜索引擎公司买关键字,
+    关键字用逗号分开">
+    <!-- 不让搜索引擎搜到 -->
+    <meta name="robots" content="NOINDEX,NOFOLLOW">
 </head>
 
 <body>
