--- a/11_html5_new_tags.html
+++ b/11_html5_new_tags.html
@@ -126,7 +126,7 @@
 
     <!-- 底部 -->
     <footer id="footer">
-      <p class="text-center">Copyright &copy; 米斯特吴 2020</p>
+      <p class="text-center">Copyright &copy; w 2020</p>
     </footer>
   </body>
 </html>
